fix: config default value

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,16 +1,10 @@
 # Server
 PORT=3000
 
-# AWS S3
-AWS_ACCESS_KEY_ID=your_access_key
-AWS_SECRET_ACCESS_KEY=your_secret_key
-AWS_REGION=us-east-1
-S3_BUCKET_NAME=your-bucket-name
-
 # x402 Payment
-FACILITATOR_URL=https://facilitator.x402.org
+FACILITATOR_URL=https://facilitator.payai.network
 RECEIVING_ADDRESS=0xYourReceivingAddress
-PAYMENT_TOKEN_ADDRESS=0xPaymentTokenAddress
+PAYMENT_TOKEN_ADDRESS=0x2e08028E3C4c2356572E096d8EF835cD5C6030bD
 PAYMENT_TOKEN_NAME=Bridged USDC (SKALE Bridge)
 NETWORK_CHAIN_ID=324705682
 
