--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@x402/core": "^2.2.0",
     "@x402/evm": "^2.2.0",
     "@x402/hono": "^2.2.0",
+    "undici": "^7.20.0",
     "axios": "^1.13.5",
     "better-sqlite3": "^11.8.1",
     "dotenv": "^16.4.7",
